--- a/index.html
+++ b/index.html
@@ -60,11 +60,11 @@
                                     <li class="navigation__item">
                                         <a href="/" class="blog-button">首页</a>
                                     </li>
-                                    <li class="navigation__item">
+                                    <!-- <li class="navigation__item">
                                         <a href="https://Jackie.cn" class="blog-button" target="_blank">博客</a>
-                                    </li>
+                                    </li> -->
                                     <li class="navigation__item">
-                                        <a href="https://Jackie.cn" class="blog-button" target="_blank">简历</a>
+                                        <a href="./module/Jackie.html" class="blog-button" target="_blank">简历</a>
                                     </li>
                                     <li class="navigation__item">
                                         <a href="https://Jackie.cn/about/" class="blog-button" target="_blank">关于</a>
@@ -83,8 +83,8 @@
                                     </li>
                                 
                                     <li class="navigation__item">
-                                        <!-- <a href="javascript:decryptEmail('ZG1lYWdvQGdtYWlsLmNvbQ==');" title="email"> -->
-                                        <a href="zhoushuai202531@163.com" title="email">
+                                        <a href="javascript:decryptEmail('emhvdXNodWFpMjAyNTMxQDE2My5jb20=');" title="email">
+                                        <!-- <a href="zhoushuai202531@163.com" title="email"> -->
                                             <i class='social iconfont icon-email'></i>
                                             <span class="label">email</span>
                                         </a>
