--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                                         </a>
                                     </li>
                                     <li class="navigation__item">
-                                        <a href="javascript:decryptEmail('emhvdXNodWFpMjAyNTMxQDE2My5jb20=');" title="email">
+                                        <a href="javascript:decryptEmail(emhvdXNodWFpMjAyNTMxQDE2My5jb20=);" title="email">
                                             <i class='social iconfont icon-email'></i>
                                             <span class="label">email</span>
                                         </a>
