修改邮箱编码完

--- a/index.html
+++ b/index.html
@@ -67,7 +67,8 @@
                                         <a href="./module/Jackie.html" class="blog-button" target="_blank">简历</a>
                                     </li>
                                     <li class="navigation__item">
-                                        <a href="https://Jackie.cn/about/" class="blog-button" target="_blank">关于</a>
+                                        <!-- <a href="./module/about.html" class="blog-button" target="_blank">关于</a> -->
+                                        <a href="https://docs.github.com/zh/get-started" class="blog-button" target="_blank">关于</a>
                                     </li>
                                 </ul>
                             </nav>
@@ -82,7 +83,7 @@
                                         </a>
                                     </li>
                                     <li class="navigation__item">
-                                        <a href="javascript:decryptEmail('emhvdXNodWFpMjAyNTMxQDE2My5jb20=');" title="email">
+                                        <a href="#" onclick="decryptEmail('emhvdXNodWFpMjAyNTMxQDE2My5jb20='); return false;" title="email">
                                             <i class='social iconfont icon-email'></i>
                                             <span class="label">email</span>
                                         </a>
